EXTRA_DIST = jsonlib.def

include_HEADERS = jsonlib.h

lib_LTLIBRARIES = libjsonlib.la

libjsonlib_la_SOURCES = \
        dump.c \
        error.c \
        hashtable.c \
        hashtable.h \
        hashtable_seed.c \
        jansson_private.h \
        load.c \
        lookup3.h \
        memory.c \
        pack_unpack.c \
        strbuffer.c \
        strbuffer.h \
        strconv.c \
        utf.c \
        utf.h \
        value.c

libjsonlib_la_LDFLAGS = \
	-version-info 1:0

